name:                advent-of-haskell
version:             0.1.0.0
homepage:            https://github.com/CrashAndSideburns/advent-of-haskell
license:             Unlicense
license-file:        UNLICENSE
author:              Morgan Arnold
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Day1
  hs-source-dirs:      src/Day1
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day2
  hs-source-dirs:      src/Day2
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

