name:                advent-of-haskell
version:             0.1.0.0
homepage:            https://github.com/CrashAndSideburns/advent-of-haskell
license:             Unlicense
license-file:        UNLICENSE
author:              Morgan Arnold
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Day1
  hs-source-dirs:      src/Day1
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day2
  hs-source-dirs:      src/Day2
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
executable Day3
  hs-source-dirs:      src/Day3
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day4
  hs-source-dirs:      src/Day4
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split

executable Day5
  hs-source-dirs:      src/Day5
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day6
  hs-source-dirs:      src/Day6
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day7
  hs-source-dirs:      src/Day7
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day8
  hs-source-dirs:      src/Day8
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day9
  hs-source-dirs:      src/Day9
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day10
  hs-source-dirs:      src/Day10
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day11
  hs-source-dirs:      src/Day11
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day12
  hs-source-dirs:      src/Day12
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day13
  hs-source-dirs:      src/Day13
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day14
  hs-source-dirs:      src/Day14
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day15
  hs-source-dirs:      src/Day15
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day16
  hs-source-dirs:      src/Day16
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day17
  hs-source-dirs:      src/Day17
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day18
  hs-source-dirs:      src/Day18
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day19
  hs-source-dirs:      src/Day19
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day20
  hs-source-dirs:      src/Day20
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day21
  hs-source-dirs:      src/Day21
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day22
  hs-source-dirs:      src/Day22
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day23
  hs-source-dirs:      src/Day23
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day24
  hs-source-dirs:      src/Day24
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Day25
  hs-source-dirs:      src/Day25
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
